--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
             colors: {
               'brutal-bg': '#f0f0f0',
               'brutal-black': '#121212',
-              'brutal-green': '#ccff00',
-              'brutal-pink': '#ff00ff',
-              'brutal-blue': '#00ffff',
-              'brutal-orange': '#ff5e00',
+              "brutal-yellow": "#ffff00",
+              "brutal-red": "#ff0000",
+              "brutal-purple": "#7f00ff",
+              "brutal-lime": "#66ff00",
+              "brutal-cyan-deep": "#00ffcc",
+              "brutal-magenta-dark": "#cc00cc",
+              "brutal-orange-hot": "#ff3300",
+              "brutal-blue-electric": "#0066ff",
+              "brutal-green-toxic": "#00ff66",
+              "brutal-pink-neon": "#ff1493"
             },
             boxShadow: {
               'hard': '4px 4px 0px 0px #000000',
