feat: Implement dark mode and refactor build setup
Adds dark mode support to the application by integrating Vite and its React plugin, along with necessary Tailwind CSS configurations for dark mode. Updates project dependencies in `package.json`.

Refactors `index.html` to include dark mode settings and font configurations. Enhances the `Marquee` component by adding transitions and adjusting duration for a smoother effect. Updates the `Navbar` to include theme toggling buttons and dynamically adjusts styles for dark mode. Modifies the `Hero` section to support dark mode background and grid patterns.

Adjusts image URLs in `constants.ts` to remove grayscale filter, aligning with a more vibrant aesthetic. Introduces new shadow variations and updates Tailwind config for enhanced styling.

This commit lays the groundwork for a more dynamic and visually adaptable application experience.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BRUTAL_DEV</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&family=Space+Grotesk:wght@400;700;900&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             fontFamily: {
@@ -19,7 +20,7 @@
             colors: {
               'brutal-bg': '#f0f0f0',
               'brutal-black': '#121212',
-               'brutal-yellow': '#ffff00',
+              'brutal-yellow': '#ffff00',
               'brutal-red': '#ff0000',
               'brutal-purple': '#7f00ff',
               'brutal-lime': '#66ff00',
@@ -34,16 +35,38 @@
               'hard': '4px 4px 0px 0px #000000',
               'hard-lg': '8px 8px 0px 0px #000000',
               'hard-xl': '12px 12px 0px 0px #000000',
-              'hard-r': '-4px 4px 0px 0px #000000',
+              'hard-white': '4px 4px 0px 0px #ffffff',
+              'hard-white-lg': '8px 8px 0px 0px #ffffff',
+              'hard-white-xl': '12px 12px 0px 0px #ffffff',
             }
           }
-        }
+        },
+        safelist: [
+          'bg-brutal-lime',
+          'bg-brutal-pink-neon',
+          'bg-brutal-blue-electric',
+          'bg-brutal-orange-hot',
+          'bg-brutal-yellow',
+          'bg-brutal-bg',
+          'bg-brutal-black',
+          'text-brutal-lime',
+          'stroke-brutal-lime',
+          'hover:bg-brutal-lime',
+          'hover:bg-brutal-pink-neon',
+          'hover:bg-brutal-blue-electric',
+          'hover:bg-brutal-orange-hot',
+          'hover:text-brutal-lime',
+          'dark:bg-black',
+          'dark:text-white',
+          'dark:border-white',
+          'dark:shadow-hard-white'
+        ]
       }
     </script>
     <style>
       html {
         scroll-behavior: smooth;
-        scroll-padding-top: 80px; /* Accounts for sticky navbar height (h-20) */
+        scroll-padding-top: 80px;
         overflow-x: hidden;
         width: 100%;
       }
@@ -52,8 +75,12 @@
         color: #121212;
         overflow-x: hidden;
         width: 100%;
+        transition: background-color 0.3s ease;
       }
-      /* Custom Scrollbar for that raw feel */
+      body.dark {
+        background-color: #121212;
+        color: #ffffff;
+      }
       ::-webkit-scrollbar {
         width: 12px;
       }
@@ -61,17 +88,45 @@
         background: #ffffff;
         border-left: 2px solid #000;
       }
+      .dark ::-webkit-scrollbar-track {
+        background: #121212;
+        border-left: 2px solid #fff;
+      }
       ::-webkit-scrollbar-thumb {
         background: #000; 
         border: 2px solid #fff;
       }
+      .dark ::-webkit-scrollbar-thumb {
+        background: #fff;
+        border: 2px solid #000;
+      }
       ::-webkit-scrollbar-thumb:hover {
-        background: #ccff00;
+        background: #66ff00;
       }
       ::selection {
         background: #000;
-        color: #ccff00;
+        color: #66ff00;
       }
+      .dark ::selection {
+        background: #66ff00;
+        color: #000;
+      }
+
+      /* Basic utility overrides */
+      .bg-brutal-lime { background-color: #66ff00 !important; }
+      .bg-brutal-pink-neon { background-color: #ff1493 !important; }
+      .bg-brutal-blue-electric { background-color: #0066ff !important; }
+      .bg-brutal-orange-hot { background-color: #ff3300 !important; }
+      .bg-brutal-yellow { background-color: #ffff00 !important; }
+      
+      .hover\:bg-brutal-lime:hover { background-color: #66ff00 !important; color: #000000 !important; }
+      .hover\:bg-brutal-pink-neon:hover { background-color: #ff1493 !important; color: #ffffff !important; }
+      .hover\:bg-brutal-blue-electric:hover { background-color: #0066ff !important; color: #ffffff !important; }
+      .hover\:bg-brutal-orange-hot:hover { background-color: #ff3300 !important; color: #ffffff !important; }
+      .hover\:text-brutal-lime:hover { color: #66ff00 !important; }
+
+      .text-brutal-lime { color: #66ff00 !important; }
+      .stroke-brutal-lime { stroke: #66ff00 !important; }
     </style>
   <script type="importmap">
 {
@@ -80,12 +135,17 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "framer-motion": "https://esm.sh/framer-motion@^12.25.0"
+    "framer-motion": "https://esm.sh/framer-motion@^12.25.0",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "url": "https://esm.sh/url@^0.11.4",
+    "path": "https://esm.sh/path@^0.12.7"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
