--- a/index.html
+++ b/index.html
@@ -56,9 +56,19 @@
           'hover:bg-brutal-pink-neon',
           'hover:bg-brutal-blue-electric',
           'hover:bg-brutal-orange-hot',
+          'hover:bg-brutal-yellow',
+          'hover:bg-brutal-bg',
+          'hover:bg-brutal-black',
+          'hover:bg-brutal-cyan-deep',
           'hover:text-brutal-lime',
           'focus:bg-brutal-cyan-deep',
           'focus:bg-brutal-pink-neon',
+          'focus:bg-brutal-lime',
+          'focus:bg-brutal-blue-electric',
+          'focus:bg-brutal-orange-hot',
+          'focus:bg-brutal-yellow',
+          'focus:bg-brutal-bg',
+          'focus:bg-brutal-black',
           'dark:bg-black',
           'dark:text-white',
           'dark:border-white',
