--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           'bg-brutal-blue-electric',
           'bg-brutal-orange-hot',
           'bg-brutal-yellow',
+          'bg-brutal-magenta-dark',
           'bg-brutal-bg',
           'bg-brutal-black',
           'bg-brutal-cyan-deep',
@@ -56,6 +57,7 @@
           'hover:bg-brutal-pink-neon',
           'hover:bg-brutal-blue-electric',
           'hover:bg-brutal-orange-hot',
+          'hover:bg-brutal-magenta-dark',
           'hover:bg-brutal-yellow',
           'hover:bg-brutal-bg',
           'hover:bg-brutal-black',
